# NVcenter

./: .coverage  .gitignore  Lindblad_0uT.npy  Lindblad_2uT.npy  Lindblad_5uT.npy  Lindblad_test.npy  Lindblad_test1.npy  MANIFEST.in  README.md  biblio.bib  custom_envs.py  omega_list1.npy  pyproject.toml  setup.py  test.ipynb  test.py  useful.py  useful_code.py
.github/workflows/: code_quality.yml  publish.yml
.ipynb_checkpoints/: development-checkpoint.ipynb
NVcenter/: NVcenter-default.mplstyle  __init__.py  brecht.py  defaults.yaml  environment.py  environment2.py  evolution.py  export.py  hamiltonian.py  helpers.py  pulse.py  pulses.py  spin.py  spin_bath.py  spin_config.py  spins.py  suter.py  system.py  two_spin_system.py  visualization.py
NVcenter/data/: C13_bath_configs.json  Dominik_C13.json  dominik_bath_small.json  positions.json
NVcenter/helpers/: qc.py
NVcenter/legacy/: __init__.py  environment.py  pulse.py  suter.py
NVcenter/mitigation/: __init__.py  circuit.py  decomposition.py  oqs.py
NVcenter/mitigation_sympy/: __init__.py  decomposition_sympy.py  oqs_sympy.py
NVcenter/utils/: __init__.py  coordinates.py  dipolar_interaction.py  dm_analysis.py  helpers.py  mpl_style.py  save_load.py
baths/: dominik_bath.json  surface_electrons.json  surface_electrons_2.json  surface_electrons_3.json  surface_electrons_4.json
development/: Alessio.ipynb  Brecht-dennis-pc.ipynb  Brecht.ipynb  Dominik.ipynb  Dominik2024.ipynb  Efficiency Boost.ipynb  ErrorMitigation.ipynb  ErrorMitigation_old.ipynb  Paper_plots.ipynb  QComp.ipynb  ReinforcementLearning.ipynb  Suter2020.ipynb  Sympy.ipynb  Tutorial.ipynb  Tutorial_II.ipynb  TwoSpin.ipynb  Untitled.ipynb  Untitled1.ipynb  converge.ipynb  demonstration.ipynb  development.ipynb  development2.ipynb
development/other/: GateCCE2-twoqubits-clean-mac (2).ipynb  RL_2qubits_SuperOp_MWLikeControl_continuosAction_Dennis (1).ipynb  RL_2qubits_SuperOp_MWLikeControl_continuosAction_Dennis (1).ipynb_  RL_2qubits_VectorialObSpace_MWLikeControl_continuosAction_10Oct-MW.ipynb
docs/: README.md  conf.py  index.rst  requirements.txt
docs/videos/: 2024-07-31 09-35-04.mkv
export/: full_bath.npy  gCCE0.npy
export/0uT/: full_bath.npy  gCCE0.npy  gCCE1.npy  no_bath.npy
export/1uT/: full_bath.npy  gCCE0.npy  gCCE1.npy  no_bath.npy
export/dominik_bath_small/: full_bath_5uT.npy  gCCE0_5uT.npy  gCCE1_5uT.npy  no_bath_5uT.npy
export/surface_electrons_4/: gCCE0_0uT.npy  (+7 more)
miri/: gCCE0.npy  gCCE1.npy  no_bath.npy
requirements/: dev-requirements.txt  requirements.txt
src/: my_module.py
tests/: test.py  test_my_add.py  test_my_module.py
(+47 files in other folders)
