[project]
name = "NVcenter"
description = "A package to perform simulations on NV centers in spin baths."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = { text = "BSD-3-Clause" }
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]

authors = [
    { name = "Dennis Herb", email = "dennis.herb@uni-ulm.de" },
]
dynamic = ["version"]

dependencies = [
    "qutip",
    "matplotlib",
    "qiskit",
    "pathos",
    "tqdm",
]

[project.urls]
repository = "https://github.com/dehe1011/NVcenter"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
