[project]
name = "NVcenter"
description = "A package to perform simulations on NV centers in spin baths."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = { text = "BSD-3-Clause" }
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]

authors = [
    { name = "Dennis Herb", email = "dennis.herb@uni-ulm.de" },
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["NVcenter", "NVcenter.mitigation", "NVcenter.mitigation_sympy"]

[tool.setuptools.dynamic]
version = {attr = "NVcenter.__version__"}
dependencies = {file = "requirements/requirements.txt"}

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = "requirements/dev-requirements.txt" }

[project.urls]
repository = "https://github.com/dehe1011/NVcenter"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
